# fwdpy11_exponential_fitness

./: CMakeLists.txt  README.rst  pyproject.toml
.github/workflows/: test_apt_install.yml  test_uv.yml
fwdpy11_exponential_fitness/: __init__.py
src/: exponential_fitness.cc
tests/: test_calculation.py  test_object_creation.py
